--- a/package.json
+++ b/package.json
@@ -12,17 +12,27 @@
     "@clerk/nextjs": "^6.31.9",
     "@clerk/themes": "^2.4.17",
     "@floating-ui/react-dom": "^2.1.6",
+    "@lexical/react": "0.24.0",
+    "@liveblocks/client": "^3.6.0",
+    "@liveblocks/node": "^3.6.0",
+    "@liveblocks/react": "^3.6.0",
+    "@liveblocks/react-lexical": "^3.6.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jsm-editor": "^0.0.12",
+    "lexical": "0.24.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
