--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@clerk/themes": "^2.4.17",
     "@floating-ui/react-dom": "^2.1.6",
     "@lexical/react": "0.24.0",
+    "@lexical/rich-text": "0.24.0",
+    "@lexical/selection": "0.24.0",
+    "@lexical/utils": "0.24.0",
     "@liveblocks/client": "^3.6.0",
     "@liveblocks/node": "^3.6.0",
     "@liveblocks/react": "^3.6.0",
     "@liveblocks/react-lexical": "^3.6.0",
+    "@liveblocks/react-ui": "^3.6.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
