--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -12,28 +12,29 @@
     "@clerk/nextjs": "^6.31.9",
     "@clerk/themes": "^2.4.17",
     "@floating-ui/react-dom": "^2.1.6",
-    "@lexical/react": "0.24.0",
-    "@lexical/rich-text": "0.24.0",
-    "@lexical/selection": "0.24.0",
-    "@lexical/utils": "0.24.0",
+    "@lexical/react": "^0.16.1",
+    "@lexical/rich-text": "^0.16.1",
+    "@lexical/selection": "^0.16.1",
+    "@lexical/utils": "^0.16.1",
     "@liveblocks/client": "^3.6.0",
     "@liveblocks/node": "^3.6.0",
     "@liveblocks/react": "^3.6.0",
-    "@liveblocks/react-lexical": "^3.6.0",
     "@liveblocks/react-ui": "^3.6.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/react": "^19.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lexical": "0.24.0",
+    "jsm-editor": "^0.0.12",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -42,11 +43,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^19.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
